--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,10 @@ dependencies {
     def retrofit_version = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    // Coil
+    def coil_version = "2.2.1"
+    implementation "io.coil-kt:coil:$coil_version"
 }
 
 kapt {
