--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="id.alianhakim.simpleofflinecaching">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".CachingApp"
@@ -17,7 +18,7 @@
         android:theme="@style/Theme.SimpleOfflineCaching"
         tools:targetApi="31">
         <activity
-            android:name=".ui.MainActivity"
+            android:name="id.alianhakim.simpleofflinecaching.features.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
