--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,14 @@ buildscript {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$dagger_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
+    ext {
+        compose_version = '1.2.0'
+    }
 }
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
 }
 
 task clean(type: Delete) {
